--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="resources/jquery.js"></script>
+
 <div class="container header">
 		<div class="row">
 			<div class="col-md-6 header-left">
@@ -20,5 +22,5 @@
 			</div>
 		</form>
 		</div>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script type="text/javascript" src="resources/bootstrap/custom.js" ></script>
+			<script type="text/javascript" src="resources/bootstrap/custom.js" ></script>
+	
